k8s/06-postgres-warehouse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-warehouse
  namespace: rabbitmq-outbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-warehouse
  template:
    metadata:
      labels:
        app: postgres-warehouse
    spec:
      containers:
        - name: postgres-warehouse
          image: postgres:16
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-warehouse
  namespace: rabbitmq-outbox
spec:
  selector:
    app: postgres-warehouse
  ports:
    - port: 5432
      targetPort: 5432
