k8s/07-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: rabbitmq-outbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8021
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: rabbitmq-outbox
spec:
  selector:
    app: order-service
  ports:
    - port: 8021
      targetPort: 8021
