k8s/08-shipping-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  namespace: rabbitmq-outbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
        - name: shipping-service
          image: shipping-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8022
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  namespace: rabbitmq-outbox
spec:
  selector:
    app: shipping-service
  ports:
    - port: 8022
      targetPort: 8022
