k8s/09-warehouse-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-service
  namespace: rabbitmq-outbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse-service
  template:
    metadata:
      labels:
        app: warehouse-service
    spec:
      containers:
        - name: warehouse-service
          image: warehouse-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8023
---
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service
  namespace: rabbitmq-outbox
spec:
  selector:
    app: warehouse-service
  ports:
    - port: 8023
      targetPort: 8023
