k8s/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-outbox-ingress
  namespace: rabbitmq-outbox
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq-outbox.local
      http:
        paths:
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8021
          - path: /api/v1/shipments
            pathType: Prefix
            backend:
              service:
                name: shipping-service
                port:
                  number: 8022
          - path: /api/v1/stocks
            pathType: Prefix
            backend:
              service:
                name: warehouse-service
                port:
                  number: 8023
